--- a/Dockerfile.mkdocs
+++ b/Dockerfile.mkdocs
@@ -1,12 +1,15 @@
 # Dockerfile for Material for MkDocs documentation 
 
-FROM python:3.13-slim
+# Base Docker image with Python 3.13 on Debian Trixie slim
+FROM python:3.13-trixie
 
-WORKDIR /project
+# Set Python environment variables
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+WORKDIR /mkdocs
 
 # Install MkDocs Material (version >= 9.5)
 RUN pip install --no-cache-dir "mkdocs-material>=9.5"
 
-# Default command: serve docs with live reload on port 8764
-# Assumes mkdocs.yml and docs/ are available in the working directory
-CMD ["mkdocs", "serve", "-a", "0.0.0.0:8764"]
+# Command runs in docker compose hence no CMD here
