--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,9 @@ site_url: https://openterminology.org
 repo_url: https://github.com/openterminology/oct
 repo_name: openterminology/oct
 
+copyright: >
+  oct - Open Clinical Terminology - is copyright &copy; 2022-25 Baw Medical Ltd, licensed under <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a> (concepts and data) or <a rel="license" href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2.0</a> (code).
+
 theme:
   name: material
   language: en
