--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -6,13 +6,13 @@
     }
 
     # Serve the offline SPA from the mounted ./static directory
-    header /static/* {
-        Cache-Control "public, max-age=3600"
+    root * /srv/static
+    
+    @static {
+        path /static/*
     }
-
-    route /* {
-        root * /srv/static
-        file_server
-        try_files {path} /index.html
-    }
+    header @static Cache-Control "public, max-age=3600"
+    
+    try_files {path} /octopus.html
+    file_server
 }
